[package]
name = "bare-tensor"
version = "0.1.0"
edition = "2021"
description = "A zero-dependency, bare-metal WebGPU AI inference engine"

[dependencies]
wgpu = "28.0.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
flume = "0.12.0"
safetensors = "0.4.5"
memmap2 = "0.9.5"
reqwest = { version = "0.13.2", features = ["stream"] }
indicatif = "0.18.4"
futures-util = "0.3.32"


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
